--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -4,6 +4,8 @@
 
 > 提瓦特旅行笔记
 
+<br/>
+
 ## 1、笔记
 
 ### 1.1、介绍
@@ -43,53 +45,55 @@
 <br/>
 
 
-### 1.3、日志
+### 1.3、菜鸟日志
 
-> 新手菜鸟萌新注意点
+> 提瓦特之旅开始了
 
-1.星落湖-七天神像，一直困在那里，走不出去，也游不出去，需要学会龙卷风技能，才有新天地。   <br/>
-2.蒙德城外的四庙遗址，去下一关有一道天堑需要飞过去。需要切换安柏长按火箭，射击石像，才有一片云雾，飘过天堑。   <br/>
+**1、新手菜鸟萌新注意点**
+
+Ⅰ 星落湖-七天神像，一直困在那里，走不出去，也游不出去，需要学会龙卷风技能，才有新天地。   <br/>
+Ⅱ 蒙德城外的四庙遗址，去下一关有一道天堑需要飞过去。需要切换安柏长按火箭，射击石像，才有一片云雾，飘过天堑。   <br/>
 --20221103
 
-- 此时完全是啥都不懂的萌新，操作不太懂，机制不明白，地图不熟悉，人物不了解。点按长按e技能q技能分不清。基本用刀枪剑戟劈砍怪物，伤害不过百。--20221222
+`此时完全是啥都不懂的萌新，操作不太懂，机制不明白，地图不熟悉，人物不了解。点按长按e技能q技能分不清。基本用刀枪剑戟劈砍怪物，伤害不过百。--20221222`
 
 <br/>
 
-3.打火姬安柏30秒内点燃火炬并打开宝箱，手残党，一直失败。   <br/>
-4.南风之狮的庙宇20秒杀死一个小怪，限制时间内清光所有怪物。冒险等级19级，角色等级30左右。只有丽莎有一战之力，但是技术还是不行，一直失败。   <br/>
+Ⅲ 打火姬安柏30秒内点燃火炬并打开宝箱，手残党，一直失败。   <br/>
+Ⅳ 南风之狮的庙宇20秒杀死一个小怪，限制时间内清光所有怪物。冒险等级19级，角色等级30左右。只有丽莎有一战之力，但是技术还是不行，一直失败。   <br/>
 旅行者，安柏，凯亚，丽莎。   <br/>
 --20221109
 
-- 此时玩了半个月，米游社都不太知道，攻略在网上随便查，打怪基本凭攻击力造成过百伤害，简称：刮痧。--20221222
+`此时玩了半个月，米游社都不太知道，攻略在网上随便查，打怪基本凭攻击力造成过百伤害，简称：刮痧。--20221222`
 
 <br/>
 
-> 角色搭配
+**2、角色搭配**
 
-5.前期冒险等级45级以下的萌新玩家，没有五星角色，可以合适搭配四星角色。   <br/>
+前期冒险等级45级以下的萌新玩家，没有五星角色，可以搭配合适的四星人物。   <br/>
 如当前我有十个角色：旅行者，御三家：安柏、凯亚、丽莎；凝光，烟绯，班尼特，芭芭拉，雷泽，诺艾尔。   <br/>
 主c、副c、奶妈、工具人四个角色组合：凝光，烟绯，班尼特，芭芭拉。   <br/>
 凝光，烟绯，班尼特 是主c；班尼特 也是副c；芭芭拉是奶妈。   <br/>
 冒险等级29级，最高角色等级49左右。   <br/>
 --20221116
 
-- 凝光在前期确实比较好用，尤其面对有盾的怪物。班尼特芭芭拉yyds永远的神，非常给力。--20221222
+`凝光在前期确实比较好用，尤其面对有盾的怪物。班尼特芭芭拉yyds永远的神，非常给力。--20221222`
 
 <br/>
 
-> 元素反应
+**3、元素反应**
 
-6.有大佬好友教了一下 要搭配不同人物  打出元素反应  实在是强   <br/>
+有大佬好友教了一下 要搭配不同人物  打出元素反应  实在是强   <br/>
 原神元素关系图   <br/>
 https://bbs.mihoyo.com/ys/article/29312495   <br/>
 https://bbs.mihoyo.com/ys/article/30600790   <br/>
 --20221118
 
-- 了解并使用元素反应才算是原神打怪入门进阶了。--20221222
+`了解并使用元素反应才算是原神打怪入门进阶了。--20221222`
 
 <br/>
 
-7.打元素反应 升等级  武器   圣遗物   
+打元素反应 升等级  武器   圣遗物   
 
 班尼特：充能  当前69级   <br/>
 丽莎：元素精通   59级   <br/>
@@ -105,11 +109,36 @@ e技能--元素战技  q技能--元素爆发   <br/>
 班丽主芭  69级  等冒险等级40突破70级   <br/>
 --20221124
 
----
+<br/>
+
+> 一些感想
+
+原神是相对**单机**的游戏，喜欢哪个人物就升级哪个。但是探索世界的时候要打得过boss。 <br/>
+角色池子里人物抽不到就算了，不用纠结，练现有的就行。 <br/>
+世界如此美好，凡事不要急躁。任务过不去也要保持**平常心**。 <br/>
+
+一刀一枪的劈砍伤害值太低，还是要多种角色组合搭配打**元素反应**才牛b。 <br/>
+雷火超载，雷水感电的伤害值就是高。 <br/>
+御三家还是有用的，安柏打火姬，丽莎后台挂雷，凯亚碎冰冻结。 <br/>
+旅行者基本只有草主才有用，其他风主、岩主、雷主太弱了。 <br/>
+**班尼特**不愧是六星战神，实在是强，着重培养。 <br/>
+注意升级顺序重要性，（冒险等级、世界等级）人物等级>武器等级>圣遗物等级。 <br/>
+
+
+常有大佬东游西逛，申请进入我的世界，太厉害的boss请他们打。 <br/>
+之前很少玩游戏的，手残党，最好在20级之前不要让别人进入你的世界。自己慢慢**体验**，感受，进步。 <br/>
+过早让大佬带，会让自己产生依赖，而且没有参与感，也不能提高走位技术。 <br/>
+原神遇到问题就在**米游社**查攻略查方法。 <br/>
+
+
+目前已玩原神近一个月，没充钱，世界等级4，冒险等级39，常用角色班尼特、丽莎、草主、芭芭拉都是69级，火雷草水。基本可以说能仗剑走天涯，打怪打boss还是比较容易的。 <br/>
+
+以上纯属个人感想，若有错误，欢迎指正。 <br/>
+--20221124
 
 <br/>
 
-8.冒险等级 世界等级 尘歌壶
+**4、冒险等级 世界等级 尘歌壶**
 
 冒险等级升到40级，世界等级也随之升到5级。怪物的级别也提高了，不太好打，没有之前那种一击毙命的感觉。  <br/>
 还是要继续升级角色，升级武器，升级圣遗物。做任务，拿经验。打boss，开宝箱。循环往复，曲线向前。  <br/>
@@ -133,11 +162,10 @@ e技能--元素战技  q技能--元素爆发   <br/>
 屏风【松木折屏-云来帆影】需要松木，在蒙德靠近凯瑟琳的传送点有三处松木，循环砍伐。 <br/>
 --20221129
 
----
 
 <br/>
 
-9.六星战神 绝缘本 雷神国家队
+**5、六星战神 绝缘本 雷神国家队**
 
 昨天冒险等级达到50级，突破任务也成功了，世界等级达到7级。 <br/>
 目前使用的人物跟一个月前差别不大：<br/>
@@ -157,11 +185,24 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 小保底90抽之前歪了提纳里，大保底90抽没问题了。抽到雷神的话，看看能否有行秋，和班尼特香菱组成雷神国家队。 <br/>
 --20221219
 
+<br/>
+
+> 一些感想
+
+原神是一款追求强度的游戏，也是旅游休闲的游戏。 <br/>
+蒙德的星空，璃月的日出，稻妻的黄昏，须弥的森林都是行程中美丽的风景。 <br/>
+人生是在不停的赶路，但是慢下来也许会有不一样的感受。 <br/>
+--20221222
+
 ---
 
 <br/>
 
-10.雷神 绝缘本 琴
+### 1.4、萌新之旅
+
+> 八级萌新了，迈向新征程
+
+**6、雷神 绝缘本 琴**
 
 祈愿3.3下半场12.27抽到的雷电将军。这两天在刷绝缘套。 <br/>
 有两个强烈的感受：雷神确实很强，雷神相当费钱。 <br/>
@@ -184,7 +225,7 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 <br/>
 
-11.赶路 大世界 剧情
+**7、赶路 大世界 剧情**
 
 早柚抓晶蝶，长按重击火车头赶路确实相当可以。 <br/>
 须弥遇到死域就要清理干净，不能让我的世界有污染。<br/>
@@ -199,7 +240,7 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 <br/>
 
-12.芭芭拉 夜兰 胡桃
+**8、芭芭拉 夜兰 胡桃 配队**
 
 海染套芭芭拉yyds，既能回血又能输出，伤害最多有两万七左右。萌新即可装备，全面碾压少女套芭芭拉。[海染砗磲]( https://bbs.mihoyo.com/ys/obc/content/3157/detail ) ，芭芭拉冲鸭。<br/>
 3.4下半夜兰胡桃up，行秋凝光北斗陪跑，傍晚六点开始，期待着。<br/>
@@ -246,6 +287,21 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 <br/>
 
+> 一些感想
+
+角色培养，强度提升。旅行者和提瓦特人物一起成长。原神需要慢慢养成。 <br/>
+环游提瓦特三个多月，终于凑齐了两队，雷神国家队：雷电将军、班尼特、行秋、香菱。胡夜莱芭：胡桃、夜兰、芭芭拉、莱依拉。 <br/>
+逐渐开始长草，任务宝箱奖励越来越少，今后的重心将以培养两支队伍为主。<br/>
+挑战深渊，追求极限。不疾不徐，缓步前行。<br/>
+旅行世界，探索解密。云起云落，心平气和。<br/>
+--20230213
+
+
+<br/>
+
+
+**9、培养角色 挑战深渊**
+
 半年过去了，上次记录是3.4版本，2023年1月18日开始，一直到2023年3月1日结束，共42天。<br/>
 这次是3.8将要更新，于2023-07-05开启，上半优菈、可莉，下半心海、散兵，陪跑四星是：米卡、雷泽、托马。<br/>
 这半年以来，依然沉浸在提瓦特世界，每天签到、做委托、合成体力、刷圣遗物、打周本、找神瞳、开宝箱、捡材料、做任务。有时跑跑地图，打打深渊。<br/>
@@ -269,7 +325,8 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 圣遗物能用或者毕业之后带着角色游历提瓦特，但是依旧是那些景色，有点无聊。<br/>
 那就只有打深渊了，每半个月更新一次深渊，有新怪物新挑战，以及新乐趣。<br/>
 所以如果长久驻扎提瓦特的话，如果不是土豪，一定要规划好抽卡策略。最好抽那些人权角色，如七神（风神温迪 岩神钟离 雷神雷电将军 草神纳西妲）、夜天后（夜兰）、叶天帝（枫原万叶）等等。 当然如果很喜欢某个角色，像可莉、迪希雅、琴、七七、迪卢克等等，悉心呵护，好好培养，依然可以横行世界扫荡深渊。<br/>
-游戏有乐趣，生活更有乐趣。<br/>
+最后提醒一下：游戏有乐趣，生活更有乐趣。<br/>
+
 抵制不良游戏，拒绝盗版游戏。<br/>
 注意自我保护，警防上当受骗。<br/>
 适度游戏益脑，沉迷游戏伤身。<br/>
@@ -279,7 +336,7 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 <br/>
 
-**深渊3.7及3.8怪物**：<br/>
+**深渊3.7及3.8怪物 （202306-202307）**：<br/>
 12-1 上半：冰霜骗骗花、炽热骗骗花；元能构装体。 <br/>
 12-1 下半：水深渊法师、冰深渊法师；深渊使徒·激流、深渊使徒·霜落。 <br/>
 12-2 上半：翠翎恐蕈。 <br/>
@@ -293,58 +350,12 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 <br/>
 
-热情是一时的，孤独是长久的。<br/>
+热情是一时的，孤独是长久的。玩原神依旧如此。<br/>
 我的人生信条：制衡强变真，克制、平衡、坚强、变化、真实。<br/>
-玩原神依旧如此。<br/>
 
 --20230710
 
 <br/>
-
-### 1.4、感想
-
-
-原神是相对**单机**的游戏，喜欢哪个人物就升级哪个。但是探索世界的时候要打得过boss。 <br/>
-角色池子里人物抽不到就算了，不用纠结，练现有的就行。 <br/>
-世界如此美好，凡事不要急躁。任务过不去也要保持**平常心**。 <br/>
-
-一刀一枪的劈砍伤害值太低，还是要多种角色组合搭配打**元素反应**才牛b。 <br/>
-雷火超载，雷水感电的伤害值就是高。 <br/>
-御三家还是有用的，安柏打火姬，丽莎后台挂雷，凯亚碎冰冻结。 <br/>
-旅行者基本只有草主才有用，其他风主、岩主、雷主太弱了。 <br/>
-**班尼特**不愧是六星战神，实在是强，着重培养。 <br/>
-注意升级顺序重要性，（冒险等级、世界等级）人物等级>武器等级>圣遗物等级。 <br/>
-
-
-常有大佬东游西逛，申请进入我的世界，太厉害的boss请他们打。 <br/>
-之前很少玩游戏的，手残党，最好在20级之前不要让别人进入你的世界。自己慢慢**体验**，感受，进步。 <br/>
-过早让大佬带，会让自己产生依赖，而且没有参与感，也不能提高走位技术。 <br/>
-原神遇到问题就在**米游社**查攻略查方法。 <br/>
-
-
-目前已玩原神近一个月，没充钱，世界等级4，冒险等级39，常用角色班尼特、丽莎、草主、芭芭拉都是69级，火雷草水。基本可以说能仗剑走天涯，打怪打boss还是比较容易的。 <br/>
-
-以上纯属个人感想，若有错误，欢迎指正。 <br/>
---20221124
-
-<br/>
-
-原神是一款追求强度的游戏，也是旅游休闲的游戏。 <br/>
-蒙德的星空，璃月的日出，稻妻的黄昏，须弥的森林都是行程中美丽的风景。 <br/>
-人生是在不停的赶路，但是慢下来也许会有不一样的感受。 <br/>
---20221222
-
-<br/>
-
-角色培养，强度提升。旅行者和提瓦特人物一起成长。原神需要慢慢养成。 <br/>
-环游提瓦特三个多月，终于凑齐了两队，雷神国家队：雷电将军、班尼特、行秋、香菱。胡夜莱芭：胡桃、夜兰、芭芭拉、莱依拉。 <br/>
-逐渐开始长草，任务宝箱奖励越来越少，今后的重心将以培养两支队伍为主。<br/>
-挑战深渊，追求极限。不疾不徐，缓步前行。<br/>
-旅行世界，探索解密。云起云落，心平气和。<br/>
---20230213
-
----
-
 
 ### 1.5、快捷键
 
@@ -1171,5 +1182,5 @@ D12--> D122[水冰]
 
 ---
 
-[^流程图]: 使用mermaid绘制流程图，但常用平台是三个【反引号】+mermaid格式。就是esc键下面、1左面的那个波浪线~键，英文输入法下直接按就是反引号。**vuepress**项目是箭头格式：头 `<mermaid>`  尾 `</mermaid>` 。
+[^流程图格式说明]: 使用mermaid绘制流程图，常用平台的格式是三个【反引号】+mermaid。在esc键下面、1左面的那个波浪线~键，英文输入法下直接按就是反引号。但**vuepress**项目是箭头格式：头 `<mermaid>`  尾 `</mermaid>` 。需要多加注意。
 
