--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -10,12 +10,12 @@
 
 ### 1.1、介绍
 
-《我的原神旅行观测记录》，又名《[原神之旅]( https://vuepress-blog.xushufa.cn/%E7%94%9F%E6%B4%BB/%E9%9A%8F%E7%AC%94/%E6%88%91%E7%9A%84%E5%8E%9F%E7%A5%9E%E6%97%85%E8%A1%8C%E8%A7%82%E6%B5%8B%E8%AE%B0%E5%BD%95.html )》，记之以事，述之以情。<br/>
+《我的原神旅行观测记录》，又名《[原神之旅]( https://xushufa.cn/docs/sheng-huo/sui-bi/wo-de-yuan-shen-lu-xing-guan-ce-ji-lu.html )》，记之以事，述之以情。<br/>
 自二零二二年十一月初开始下载原神，第一次玩这款全球知名游戏。安装包300多兆，但是装好后还要下载18g的资源，确实很大。<br/>
 之前只玩过功能比较简单、内容相对单一的游戏，像qq农场、部落冲突、天天酷跑、和平精英等等。<br/>
 世界规模如此巨大，内容剧情如此精彩，画面色彩如此绚丽的游戏还是首次接触。<br/>
-想不到一接触就入迷了，一入迷难以自拔，故此记录，以作[旅行]( https://gitcode.net/xu180/document/-/blob/master/article/%E9%9A%8F%E7%AC%94/%E6%88%91%E7%9A%84%E5%8E%9F%E7%A5%9E%E6%97%85%E8%A1%8C%E8%A7%82%E6%B5%8B%E8%AE%B0%E5%BD%95.md )感想。<br/>
-原神UID：254901679，欢迎加好友。文档记录于个人[网站]( https://xushufa.cn )，欢迎浏览。<br/>
+想不到一接触就入迷了，一入迷难以自拔，故此[记录]( https://gitcode.net/xu180/document/-/blob/master/article/%E9%9A%8F%E7%AC%94/%E6%88%91%E7%9A%84%E5%8E%9F%E7%A5%9E%E6%97%85%E8%A1%8C%E8%A7%82%E6%B5%8B%E8%AE%B0%E5%BD%95.md )，以作旅行感想。<br/>
+原神UID：254901679，欢迎加好友。文档记录于个人网站，欢迎浏览。<br/>
 --20221124
 
 <br/>
@@ -204,7 +204,7 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 **6、雷神 绝缘本 琴**
 
-祈愿3.3下半场12.27抽到的雷电将军。这两天在刷绝缘套。 <br/>
+祈愿3.3下半场12.27抽到的[雷电将军]( https://bbs.mihoyo.com/ys/strategy/content/2558/detail )。这两天在刷绝缘套。 <br/>
 有两个强烈的感受：雷神确实很强，雷神相当费钱。 <br/>
 现在我的雷神85级，精五鱼获，暴击59，暴伤111，充能275，天赋3-6-9，踩班尼特的宗室套点赞加成，最高伤害可以达到七万五。比之前过万的伤害有显著提升。可以说是横扫大世界了。 <br/>
 
