--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -355,9 +355,28 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 --20230710
 
+---
+
+### 1.5、名词解释
+
+**粉球**：纠缠之缘，在祈愿up池子里抽取角色。目前有雷电将军、胡桃、可莉、神里绫华、温迪、八重神子、赛诺、散兵、珊瑚宮心海等等几十个五星角色。 <br/>
+**篮球**：相遇之缘，在常驻池子里抽取角色。目前有七个五星角色：莫娜、七七、琴，刻晴、迪卢克、提纳里、迪希雅。 <br/>
+**保底**：最多90个粉球抽到一个五星角色，此五星是当期up即是小保底不歪，此五星不是当期up即小保底歪了。如果歪了则最多再抽90粉球必定会获得当期up，称之为大保底。一般情况60到80抽会获取一个五星。 <br/>
+**定轨**：武器池的保底机制，角色池是第二次必定获取，武器是第三次必定获取。但是每次最多是八十抽。 武器池用的是粉球，160[原石]( https://bbs.mihoyo.com/ys/obc/content/5566/detail )=1粉球（篮球）。<br/>
+<br/>
+**人权卡**：强大的、好用的、抽了不亏的五星角色。目前有五位：岩神钟离、雷神雷电将军、草神纳西妲、夜天后-夜兰、叶天帝-枫原万叶。 <br/>
+**体力**：原粹树脂，满值160，8分钟自动补充一个，也可用脆弱树脂或原石补充，1脆弱树脂=60点原粹树脂；50原石=60点原粹树脂；40原粹树脂=1浓缩树脂。打秘境刷圣遗物用的就是体力。 <br/>
+**国家队**：含有点秋香，班尼特、行秋、香菱的队伍。 <br/>
+<br/>
+**深渊**：深境螺旋，位于蒙德东方的马斯克礁。共12层，前八层为一次性挑战。后四层每半个月更新一次，每层有三间；满星通关一间获取50原石，满星通关一层获取150原石，共600原石。 <br/>
+**大世界**：除深渊之外的原神提瓦特世界。 <br/>
+**风套**：圣遗物-翠绿之影，风属性角色如万叶最佳圣遗物。在合成台或者秘境-铭记之谷获取。 <br/>
+**草套**：圣遗物-深林的记忆，草属性角色如纳西妲最佳圣遗物。在草本-秘境-缘觉塔获取。 <br/>
+--202307 <br/>
+
 <br/>
 
-### 1.5、快捷键
+### 1.6、快捷键
 
 > 原神电脑端操作快捷键
 
@@ -394,9 +413,6 @@ Enter-聊天页面                      <br/>
 Ctrl-切换走路/跑步状态              <br/>
 
 ---
-
-<br/>
-
 
 ## 2、观测枢
 
