--- a/docs/目录.md
+++ b/docs/目录.md
@@ -13,6 +13,7 @@
   - [二十四式太极拳](生活/随笔/二十四式太极拳.md)
   - [短期远行必备物品](生活/随笔/短期远行必备物品.md)
   - [我的原神旅行观测记录](生活/随笔/我的原神旅行观测记录.md)
+  - [纪念一下，三百天打满深渊](生活/随笔/纪念一下，三百天打满深渊.md)
 
 > 文档
 
