--- a/docs/生活/文档/三千个脑筋急转弯.md
+++ b/docs/生活/文档/三千个脑筋急转弯.md
@@ -2,7 +2,9 @@
 
 从本人百度云盘寻到的，在大学时期2010年代保存的百科文档资料。
 
-## 一点一横长
+## 一千
+
+### 一点一横长
 
 <br>0001—二三四五六七八九 答案：缺衣少食 
 <br>0002—门里站着一个人。 答案：闪 
@@ -67,7 +69,7 @@
 <br>0060—什么人可以饭来张口，衣来伸手？ 答案：婴儿 
 <br>0061—脱了红袍子,是个白胖子去了白胖子,是个黑圆子。打一植物？ 答案：荔枝 
 <br>0062—一辆出租车在公路上正常行驶，并且没有违反任何交通规则却被一个警察给拦住了，请问为什么 答案：警察打车 
-<br>0063—有一个网站，凡是上网的人没有不先去那里的(wwwhang123com)为什么 答案：任何人都能够各需所爱. 更多更新免费电子书请关注www.txt99.com
+<br>0063—有一个网站，凡是上网的人没有不先去那里的(wwwhang123com)为什么 答案：任何人都能够各需所爱
 <br>0064—鸭蛋一打有多少个？ 答案：全没有了碎了 
 <br>0065—后脑勺受伤的人怎样睡觉？ 答案：闭着眼睛睡觉 
 <br>0066—人死后为什么变得冰凉？ 答案：心静自然凉 
@@ -106,7 +108,7 @@
 <br>0099—哪儿的海不产鱼 答案：辞海 
 <br>0100—楚楚的生日在三月三十日，请问是哪年的三月三十日 答案：每年的三月三十日 
  
-## 两个面一个外面一个里面
+### 两个面一个外面一个里面
 
 <br>0101—有种动物，大小像只猫，长相又像虎，这是什么动物 答案：小老虎 
 <br>0102—猴子每分钟能掰一个玉米，在果园里，一只猴子５分钟能掰几个玉米 答案：一个也没有掰到 
@@ -210,7 +212,7 @@
 <br>0199—什么东西可以死很多次，而且一般情况下每次死的时间不超过1分钟？ 答案：死机 
 <br>0200—有甲、乙、丙三人跳伞，甲乙有带伞，丙则无，但后来反而丙没事，甲乙都有事，为什么？ 答案：甲乙为丙办丧 
 
-## 有三个小朋友在猜拳
+### 有三个小朋友在猜拳
 
 <br>0201—世界上什么东西以近2000公里小时的速度载着人奔驰,而不必加油或其它燃料 答案：地球 
 <br>0202—考试做判断题，小花掷骰子决定答案，但题目有20题，为什么他却扔了40次？ 答案：他要验证一遍 
@@ -314,7 +316,7 @@
 <br>0299—一名国中女生上了传说中闹鬼的厕所后，为什么昏倒在厕所里面？ 答案：他忘了厕所门是带拉的推半天推不开晕过去了 
 <br>0300—某人向枪靶射击了五发子弹，共得一百分，他射中了哪里？ 答案：只中一发正好一百 
 
-## 四分钟
+### 四分钟
 
 <br>0301—甲跟乙打赌：“我可以咬到自己的右眼。”乙不信，甲把假的右眼拿下来放在嘴里咬了五下。甲又说：“我还可以咬到自己的左眼。”乙仍然不信，结果，甲又赢了，他是怎么做到的？ 答案：他把假牙拿下来咬左眼 
 <br>0302—大多数人是用左手端碗，右手吃饭，对吧？ 答案：那要嘴巴干什么 
@@ -418,7 +420,7 @@
 <br>0399—为什么会有悲伤茱丽叶？ 答案：因为有爱的罗密欧 
 <br>0400—为什么天上会有星星？ 答案：证明爱因斯坦的相对论天上有星星地下也有猩猩. 
  
-## 五月花
+### 五月花
 
 <br>0401—当跳到黄河也洗不清的时候，该如何澄清自己？ 答案：跳到澄清湖里 
 <br>0402—骑马的蒙古人，是怎么走路的？ 答案：走马步 
@@ -522,7 +524,7 @@
 <br>0499—有一个人想要过河但水很急，这里有一把梯子和木头，但梯子还差10公尺，木头只有5公尺，请问他要怎样才能过河？ 答案：走桥 
 <br>0500—一辆火车由基隆到高雄全程需要6个小时才可到达，如今行使了3个小时，火车现在应该在什么地方？ 答案：在铁轨上 
 
-## 鸡犬不留
+### 鸡犬不留
 
 <br>0501—吸血鬼卓九勒，挨饿了二个月，好不容易找到一个男人吸血，没想到血一吸完，卓九勒一命呼，这究竟是怎么一回事？ 答案：因为两个血型不一样 
 <br>0502—小陈是个大家公认的穷光蛋，但是他居然能日掷千金，为什么？ 答案：小陈是银行的运钞员 
@@ -626,7 +628,7 @@
 <br>0599—攻城时为什么都要杀个鸡犬不留？ 答案：加菜 
 <br>0600—为什么有很多女孩子嫁给职业军人？ 答案：吃馒头不用涮碗 
 
-## 7个大鱼
+### 7个大鱼
 
 <br>0601—为什么军中的早餐一直是豆浆馒头，从不吃稀饭？ 答案：馒头比较好数 
 <br>0602—阿兵哥出操去野外最喜欢打什么？ 答案：打香肠 
@@ -730,7 +732,7 @@
 <br>0699—世界上最牢固的琴是什么琴？ 答案：钢琴 
 <br>0700—长胡子的山羊是母羊还是公羊？ 答案：山羊无论公母都长胡子 
  
-## 八只脚
+### 八只脚
 
 <br>0701—李东对张南讲，他昨天刚出差到广州，晚上给家里打电话时妻子问他是不是把家里信箱钥匙带走了，他一找，果然是的。今天他赶紧把钥匙放在信封里寄了回去。张南一听，骂李东是笨蛋。你说这是为什么？ 答案：因为钥匙被投到信箱里了,还是拿不到. 
 <br>0702—有一座长10米的木桥，最大载重量是3吨。现有一辆2吨重的卡车，载了一根长30米、重3吨的铁链，要通过这座木桥。如不能将铁链分开，有什么简单可行的方法可使卡车安全通过？ 答案：只要让卡车拖着铁链过桥就可安全. 
@@ -834,7 +836,7 @@
 <br>0799—怎样用一块钱换一百块钱？？ 答案：打电话向家里要钱 
 <br>0800—喝什么东西可以让人变成鬼 答案：酒酒鬼 
 
-## 过生日是九岁
+### 过生日是九岁
 
 <br>0801—欧美人就餐头一道菜是汤，你知道汤里经常会有什么吗？ 答案：盐 
 <br>0802—一个小姑娘再打排球，她发了一个球，可无论谁都接不着，为什麽？ 答案：球没发出去或出界了 
@@ -1042,7 +1044,9 @@
 <br>0999—商店标明一支双响枪射程160米，为什么实际射程只有80米呢？ 答案：双响加起来算岂不是正好. 
 <br>1000—诗人为什么不像小说家、散文家那样称 答案：诗买不了几个钱成不了家. 
 
-## 10元钱
+## 两千
+
+### 10元钱
 
 <br>1001—奶奶过马路为什么总是抓紧小孙子的手？ 答案：奶奶胆小. 
 <br>1002—大龙家今晚的电视为什么只有图像，没有声音？ 答案：上演的是哑剧. 
@@ -1147,7 +1151,7 @@
 <br>1099—什么东西没有价值但大家又很喜欢？ 答案：无价之宝. 
 <br>1100—爸爸什么时象个孩子？ 答案：在爷爷面前. 
 
-## 揍了电线杆一顿
+### 揍了电线杆一顿
 
 <br>1101—为什么养长颈鹿最不花钱？ 答案：因为他们的脖子长,一点点食物都要走很长的路才能到肚? 
 <br>1102—沙漠中最常见的东西是什么？ 答案：沙子. 
@@ -1251,7 +1255,7 @@
 <br>1199—人们最常讲什么话？ 答案：电话. 
 <br>1200—一个数若去掉前面的第一个数字是11，去掉最后一个数字为50，原数是多少？ 答案：五十一. 
 
-## 甲乙两位仇人
+### 甲乙两位仇人
 
 <br>1201—为什么吃完晚餐后，全家都喜欢坐在电视机前看电视？ 答案：因为站久了脚会酸. 
 <br>1202—台北车站前面是忠孝西路，请问左右两边是什么路？ 答案：柏油路马路. 
@@ -1355,7 +1359,7 @@
 <br>1299—为什么妈妈几个月都不给弟弟吃饭，但弟弟仍然健康成长。为什么？ 答案：是在妈妈肚子里 
 <br>1300—小王娶媳妇为什么不花一分钱？ 答案：做梦娶 
  
-## 三个小朋友
+### 三个小朋友
 
 <br>1301—连续剧西游记中，谁最历害又聪明？ 答案：编剧 
 <br>1302—在厕所遇见朋友时，最好不要问哪一句话？ 答案：吃了没有 
@@ -1459,7 +1463,7 @@
 <br>1399—你能做、我能做、大家都能做，一个人能做、两个人不能一起做。这是做什么 答案：做梦 
 <br>1400—明明是个近视眼，也是个出名的馋小子，在他面前放一堆书，书后放一个苹果，你说他会先看什么 答案：什么都看不见 
 
-## 四百万公里
+### 四百万公里
 
 <br>1401—一个不会游泳的人掉进了水里却没有淹死，为什么 答案：穿着救生衣 
 <br>1402—用什么可以解开所有的谜 答案：迷底 
@@ -1563,7 +1567,7 @@
 <br>1499—哪一颗牙最后长出来？ 答案：假牙 
 <br>1500—为什么两只老虎打架,非要拼个你死我活绝不罢休？ 答案：没有人敢去劝架 
 
-## 按5人排列
+### 按5人排列
 
 <br>1501—小红与妈妈都在同一个班里上课，这是为什么？ 答案：一个是学生，一个是老师 
 <br>1502—为什么游泳比赛中青蛙输给了狗？ 答案：青蛙用蛙泳犯规 
@@ -1667,7 +1671,7 @@
 <br>1599—黑头发有什么好处？ 答案：不怕晒黑 
 <br>1600—失意的TOM跳入河中，可他不会游泳，也没有淹死，为什么？ 答案：爱河 
 
-## 六个小时
+### 六个小时
 
 <br>1601—哪种竹子不长在土里？ 答案：爆竹 
 <br>1602—黑头发有什么好处？ 答案：不必担心被晒黑 
@@ -1771,7 +1775,7 @@
 <br>1699—为什么青蛙可以跳得比树高？ 答案：因为树根本就不会跳嘛！ 
 <br>1700—文文在洗衣服，但洗了半天，她的衣服还是脏的，为什么？ 答案：他在洗别人的衣服 
 
-## 只能有７人
+### 只能有７人
 
 <br>1701—大男人在小便猜一物 答案：花（flower 扶老二） 
 <br>1702—什么时候，四减一等于五？ 答案：一个四边形，切下一个角，还有五个角 
@@ -1875,7 +1879,7 @@
 <br>1799—人在不饥渴时也需要的是什么水？ 答案：薪水 
 <br>1800—小张说的相声大家都喜欢听，为什么他有时说话还要付钱？请问为什么 答案：打电话 
 
-## 8平均
+### 8平均
 
 <br>1801—一个袋子里装着豆子，有黄豆和绿豆，一个人把豆子倒在地上，很快他就把黄豆和绿豆分开了，请问他是怎么分的？ 答案：袋子里就二颗豆 
 <br>1802—熊掌和鱼什么情况下可以兼得？ 答案：饭店里 
@@ -1979,7 +1983,7 @@
 <br>1899—有一种动物，你杀了它却流了你自己的血，这是什么动物？ 答案：蚊子 
 <br>1900—小王与父母头一次出国旅行，由于语言不通，他的父母显得不知所措，小王也不懂外语，却象在自己国家里一样，没有感到丝毫不便，这是为什么？ 答案：他是婴儿 
 
-## 其它九只不飞走
+### 其它九只不飞走
 
 <br>1901—为了怕身材走样，结婚后不生孩子的美女怎么称呼？ 答案：　绝代佳人 
 <br>1902—进动物园后，最先看到的是哪种动物？ 答案：人 
@@ -2083,7 +2087,9 @@
 <br>1999—闭着眼睛也看得见的是什么？ 答案：梦 
 <br>2000—一个阴森的夜晚，眼前站着长发披肩，身穿白衣脸色苍白的一个女孩，用手去摸她，却摸不着，为什么？ 答案：中间隔着透明玻璃窗 
 
-## 十次婚
+## 三千
+
+### 十次婚
 
 <br>2001—你能用蓝笔写出红字来吗　 答案：写个红字有何难 
 <br>2002—一辆出租车在公路上正常行驶，并且没有违反任何交通规则却被一个警察给拦住了，请问为什么 答案：警察打车 
@@ -2187,7 +2193,7 @@
 <br>2099—妻子：“糟糕，亲爱的，你送给我的钻石戒指，落到红茶里去了……”结果，戒指又平安回到妻子的手上，而且一点也没有弄湿的痕迹。这难道是奇迹吗 答案：因为是戒指掉到红茶的茶叶罐中了 
 <br>2100—纸上写着某一份命令。但是，看懂此文字的人，却绝对不能宣读命令。那么，纸上写的是什么呢？ 答案：纸上写着“不要念出此文” 
 
-## 一山可容
+### 一山可容
 
 <br>2101—什么情况一山可容二虎？ 答案：一公一母 
 <br>2102—什么人是不用电的 答案：缅甸人 
@@ -2290,7 +2296,7 @@
 <br>2198—有一辆没有开任何照明灯的卡车在漆黑的公路上飞快的行使，天还下着雨，没有闪电、没有月光也没有路灯；就在这时，一位穿着一身黑衣的盲人横穿公路！在这千钧一发之际，汽车司机紧急的刹车了，避免了一次恶性事故的发生。为什么会是这样 答案：漆黑的公路是公路的颜色，当时是白天 
 <br>2199—什么地方开口说话要付钱 答案：打电话 
 
-## 两个
+### 两个
 
 <br>2200—小张被关在一间并没有上锁的房间里，可是他使出吃奶的力气也不能把门拉开，这是怎么回事？ 答案：推开门就行 
 <br>2201—什么布剪不断？ 答案：瀑布 
@@ -2394,7 +2400,7 @@
 <br>2298—一个人背一个包，刚一出门，就摔死了，为什么？ 答案：因为他在飞机上 
 <br>2299—什么时候开口说话要付钱 答案：打电话 
 
-## 3个人捉迷藏
+### 3个人捉迷藏
 
 <br>2300—画圣是我国哪位著名画家？ 答案：吴道子 
 <br>2301—威尼斯画派的代表是谁？ 答案：提香 
@@ -2498,7 +2504,7 @@
 <br>2398—为什么一个人一天吃9头牛？ 答案：吃的是蜗牛 
 <br>2399—什么东西要藏起来暗地里用,用完之后再暗地里交给别人 答案：底片 
 
-## 真的死了
+### 真的死了
 
 <br>2400—小刘是个很普通的人，为什么竟然能一连十几个小时不眨眼 答案：因为他已经睡了 
 <br>2401—小张被关在一间没有上锁的房里，可是他使出吃奶的力气也不能把门拉开，这是为什么？ 答案：推开就可以了 
@@ -2602,7 +2608,7 @@
 <br>2498—民航局开张，（打一成语）？ 答案：有机可乘 
 <br>2499—苦是什么，犹是什么？ 答案：苦是味觉，忧是感觉 
 
-## 左无右有
+### 左无右有
 
 <br>2500—做什么事，一只眼开一只眼闭会比较好？ 答案：射击 
 <br>2501—假如在海上，你的船破了一个洞，此时你该怎么办？ 答案：再挖一个洞，让水流出去。 
@@ -2706,7 +2712,7 @@
 <br>2598—什么东西见者有份？ 答案：阳光 
 <br>2599—为什么小王写了一个字，人人都说他写了错字？ 答案：因为他本身就写了个错字 
 
-## 6个烧饼
+### 6个烧饼
 
 <br>2600—什么鸭子用两只脚走路？ 答案：所有的鸭子都是用两只脚走路 
 <br>2601—为什么人们要到市场上去？ 答案：因为市场不可能来 
@@ -2810,7 +2816,7 @@
 <br>2698—陈老太太得的并不是绝症，为什么医生却说她无药可救？ 答案：她没钱买药 
 <br>2699—跳伞时，怎样才能分的出老兵和新兵？ 答案：新兵的屁股上有鞋印 
 
-## 重7吨
+### 重7吨
 
 <br>2700—什么鞋子，你绝不会穿着它去逛街？ 答案：溜冰鞋 
 <br>2701—一年四季都盛开的花是什么花？ 答案：塑料花 
@@ -2914,7 +2920,7 @@
 <br>2798—一次宴会上，一对夫妻同客人共握手48次，问这次宴会上共有几人？ 答案：26人 
 <br>2799—小明读小学二年级,他的家住在12楼,他每次去学校都是乘电梯下去的,但放学后,乘电梯只能乘到11楼为什么 答案：小明不够高，按不到12这个按钮 
 
-## 嘴巴
+### 嘴巴
 
 <br>2800—袋鼠和猴子参加跳高比赛,为什么猴子一开始就赢了 答案：袋鼠双脚起跳，犯规 
 <br>2801—最后冒出来的牙齿是哪一颗？ 答案：假牙 
@@ -3018,7 +3024,7 @@
 <br>2898—烟缸，打一字。 答案：盔 
 <br>2899—一字六笔无竖横，同心同德力无穷,打一字。 答案：众 
 
-## 九只却都没有飞走
+### 九只却都没有飞走
 
 <br>2900—世界拳击冠军却很容易被什么击倒？ 答案：瞌睡 
 <br>2901—有两个人，一个面朝南，一个面朝北的站立着，不准回头，不准走动，不准照镜子，问他们能否看到对方的脸？ 答案：当然能，他们是面对面站着的 
@@ -3121,10 +3127,12 @@
 <br>2997—老王每天都要刮很多遍脸，可脸上还是有胡子为什么？ 答案：他是在替别人刮脸。 
 <br>2998—如何让一只木棒放在地上而又不能让人跨过去 答案：将木棒放在墙边 
 <br>2999—哪种报刊发行量最少 答案：电报 
-
-## 十支 
-
 <br>3000—地球上什么地方的出生率最高 答案：产房 
+
+## 三千六
+
+### 十支 
+
 <br>3001—小张一直朝北走,走着走着他又没有转身可是却走到了正南方,为什么 答案：他越过北极点在向前走就是南方 
 <br>3002—为什么现代人越来越言而无信 答案：因为有了电话 
 <br>3003—一个职业登山运动员什么山上不去 答案：刀山 
@@ -3174,9 +3182,7 @@
 <br>3047—老王的头发已经掉光了,可为什么他还老去理发店 答案：老王是理发师 
 <br>3048—王既不买票有没有月票的为什么可以从起点坐到终点 答案：因为他是司机 
 <br>3049—冬天里，不通过加热，如何才能把冰立刻变成水？ 答案：把冰的两点去掉 
-
-## 过一条河
-
+<br>
 <br>3050—有一个年轻人要过一条河去办事，这条河没有船也没有桥。他便在上午游泳过河，一个小时他便游到了对岸，当天下午，河水的宽度以及流速都没有变，他的游泳速度也没有变，可他竟用了两个半小时才游到河对岸；你说为什么？ 答案：两个半小时当然就是一个小时了 
 <br>3051—死前放屁又叫什么？ 答案：绝响 
 <br>3052—什么话可以世界通用 答案：电话 
@@ -3228,7 +3234,7 @@
 <br>3098—有一样东西，你只能用左手拿它,右手却拿不到,这是什么东西 答案：右手 
 <br>3099—为什么彤彤与壮壮第一次见面就一口咬定壮壮是喝羊奶长大的 答案：壮壮是一头羊 
 
-## 二个人
+### 一个煤气灶
 
 <br>3100—阿勇做事总是拖泥带水，但上级部门总是表彰他，这是为什么？ 答案：他是泥瓦匠 
 <br>3101—小戴手里拿着火柴走到厨房，这有一个煤气灶和一个酒精灯，他如果想烧开水，请问：他应该先点燃什么？ 答案：火柴 
@@ -3332,7 +3338,7 @@
 <br>3198—什么书中毛病最多？ 答案：医学书 
 <br>3199—以下石头城、太阳城、凤凰城、瓜果城、汽车城、英雄城、足球城分别都是哪几个城市吗？ 答案：江苏省南京市；西藏拉萨市；广西南宁市；甘肃省兰州市 
 
-## 三国
+### 第二位
 
 <br>3200—伴奏。打一成语 答案：肋人为乐 
 <br>3201—环球旅行。猜一现代香港名星名 答案：周星驰 
@@ -3436,7 +3442,7 @@
 <br>3298—一个人掉到河里，，它从河里爬上来，头发却没湿，为什么？ 答案：因为他是光头 
 <br>3299—一个自讨苦吃的地方在哪里？ 答案：药店 
 
-## 四块蛋糕
+### 比3大
 
 <br>3300—你能否用3跟筷子搭起一个比3大比4小的数？ 答案：搭成圆周率“∏” 
 <br>3301—数字0到1之间加一个什么号，才能使这个数比0大，而比1小呢？ 答案：加个“.”成为“0.1” 
@@ -3539,7 +3545,7 @@
 <br>3397—网要什么时候可以提水 答案：当水结成冰的时候 
 <br>3398—一个长宽各一米，深两米的土坑，坑里没有水，为什么有人不慎跌落下去淹死了 答案：因为那是粪坑 
 
-## 在五楼
+### 四处逃窜
 
 <br>3399—小华说他能在1秒钟之内把房间和房间里的玩具都变没了，这可能吗 答案：把眼睛闭上 
 <br>3400—中国人最早的姓氏是什么 答案：是善，没听说"人之初，姓本善"吗 
@@ -3643,7 +3649,7 @@
 <br>3497—相同内容的书，为什么小高要同时买两本？ 答案：送人 
 <br>3498—什么时候子女相逢能并肩？ 答案：好 
 
-## 六十米高
+### 五十次
 
 <br>3499—小明从不念书却得了模范生，为什么 答案：小明是聋哑学生 
 <br>3500—一个招牌突然由高处掉落,砸向并排行走的五个人,为什么只有三个人受伤 答案：因为是麦当劳（M）的招牌 
@@ -3719,7 +3725,7 @@
 <br>3569—青春痘长在哪里,你比较不担心 答案：别人脸上 
 <br>3570—某地发生了大地震，伤亡惨重，收音机里不断传出受灾情况以及寻人启事，一位老大爷一直在注意收听收音机的报道。有人问他：“收音机里播放过你孙子的消息了吗？”他回答说：“没有。”接着他又说：“但我知道我孙子肯定平安无事。”请问 答案：他孙子是那个播音员 
 <br>3571—在一次考试中，一对同桌交了一模一样的考卷，但老师认为他们肯定没有做弊，这是为什么？ 答案：都是白卷 
-<br>3572—车祸发生不久，第一批警察就赶到了现场，他们发现司机完好无损，翻覆的车子内外血迹斑斑，却没有见到死者和伤者，而这里是荒郊野外，并无人烟，这是怎么回事？ 答案：这是一辆献血车 
+<br>3572—车祸发生不久，第一批警察就赶到了现场，他们发现司机完好无损，翻覆的车子内外血迹斑斑，却没有见到死者和伤者，而这里是荒郊野外，并无人烟，这是怎么回事？ 答案：这是一辆献血车 
 <br>3573—为什么关羽比张飞死的早？ 答案：红颜薄命 
 <br>3574—什么牛不会吃草？ 答案：蜗牛 
 <br>3575—老李刚理完发，便要求理发师将他的头发“中分”，理发师却说做不到，为什么？ 答案：理发师给老李理了光头 
@@ -3747,7 +3753,7 @@
 <br>3597—小王用捕鼠笼在家抓老鼠,第二天一早发现笼子里抓了一只活老鼠,而笼子外面却有二只死老鼠四脚朝天的死老鼠,为什么？ 答案：那二只看见同伴竟然笨得上当被捕活活笑死的。 
 <br>3598—开什么车最省油 答案：开夜车 
  
-## 乌七嘛黑
+### 六条腿
 
 <br>3599—去教堂向神父忏悔之前，都事先做了些什么事 答案：犯罪 
 <br>3600—口吃的人做什么事最亏？ 答案：打长途电话 
