--- a/docs/生活/文档/安徽电信免费流量获取方法.md
+++ b/docs/生活/文档/安徽电信免费流量获取方法.md
@@ -1,5 +1,37 @@
 # 安徽电信免费流量获取方法
 
+## 二零二三
+
+### 获取方法
+
+各位小伙伴，现在主要有以下几个方法正规免费获取流量：
+
+1、安徽电信公众号--福利专区--个人中心--**签到有礼** 。每日连续签到，使用金币兑换流量，一个月大概有4G多免费流量。活动到2023年12月31结束。
+
+2、安徽电信公众号--福利专区--个人中心--**夏日送福利** （顶部动态活动）。每日签到，有几率获取流量、翼支付权益金、视频会员等等。活动到2023年8月31结束。
+
+3、安徽电信公众号--福利专区--个人中心-**福利大放送** （顶部动态活动）。每月参与一次抽奖，有几率获取金币、流量、翼支付权益金、视频会员等等。活动到2023年12月31结束。
+
+4、安徽电信掌上10000--福利中心--**玩酷大转盘**。消耗兑换币、分享活动等方式获取抽奖机会，有几率获取金币、流量、翼支付权益金、视频会员等等。活动到2023年9月30结束。
+
+2023.08.01
+
+---
+
+### 群公告 
+
+欢迎各位小伙伴，本群为安徽电信流量分享群。 <br/>
+微信小程序-流量来啦已停止使用，相互分享相互帮点获取流量的日子暂时结束了。<br/>
+目前的流量渠道主要来自安徽电信掌上10000APP及微信公众号安徽电信的个人中心签到兑换流量。<br/>
+免费获取的流量渐渐少了，相互帮助的机会也少了。<br/>
+但本群会继续存在，大家如果有最新的合规的官方的获取流量的方法可以在此交流。<br/>
+最后再说一下，为营造良好的沟通环境，本群禁止发广告，一次警告，两次踢群。<br/>
+[流量群]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/wxgGroup.jpg )
+
+---
+
+## 二零二二
+
 安徽电信免费流量掌上10000流量来啦，安徽电信免费流量获取方法，主要是通过以下三个渠道签到、抽奖： <br/>
 `安徽掌上10000 APP` 、 `微信公众号-安徽电信` 、 `微信小程序-流量来啦` <br/>
 
@@ -14,7 +46,7 @@
 
 ---
 
-## 1、安徽掌上10000 APP  签到、摇一摇赢福袋
+### 1、安徽掌上10000 APP  签到、摇一摇赢福袋
 
 ![11]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/11.jpg )
 
@@ -38,7 +70,7 @@
 
 ---
 
-## 2、微信公众号-安徽电信 签到、抽奖
+### 2、微信公众号-安徽电信 签到、抽奖
 
 ![21]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/21.jpg )
 
@@ -62,7 +94,7 @@
 
 ---
 
-## 3、微信小程序-流量来啦 签到、拆福包
+### 3、微信小程序-流量来啦 签到、拆福包
 
 ![31]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/31.jpg )
 
@@ -86,7 +118,7 @@
 
 ---
 
-## 4、中国电信-福利嘉年华
+### 4、中国电信-福利嘉年华
 
 [中国电信-福利嘉年华]( https://open.weixin.qq.com/connect/oauth2/authorize?appid=ww094e9c4b139f3b6e&redirect_uri=http%253A%252F%252Fwx2020.gstai.com%252Fahqy_gzh_yyl_v2%252Fcustomer%252Fshare.php%253Fu%253D%2526o%253DoE8I-wMgjIpHKAR5lGvreOd3o2pU%2526p%253D%2526co%253DoE8I-wMgjIpHKAR5lGvreOd3o2pU%2526cu%253DwmYUBdCQAAK5XsxsIimorizvgBXG5hHQ%2526st%253D2%2526code%253DFCa-cBvkYEIEmbKdx5Gj7oc1pMYmtzczhsnVwJoioF8%2526state%253Dah_qy&response_type=code&scope=snsapi_base&state=ah_qy#wechat_redirect ) ：只能在微信中打开
 
@@ -101,7 +133,7 @@
 
 ---
 
-## 5、安徽电信福利-领1G流量
+### 5、安徽电信福利-领1G流量
 
 > 安徽掌上10000 APP
 
