--- a/docs/生活/随笔/驾考记事.md
+++ b/docs/生活/随笔/驾考记事.md
@@ -14,8 +14,8 @@
 
 > 20180325  周日  报名
 
-- 昨天3月24在蓝鼎海棠湾附近的驾校，八一驾照和五星驾校看了下，了解了情况。周日在天湖路安农大驾校（公司附近-合肥驰远创业园的苏迪科技）报名了，2840元报名费，下周三下午13:30-15:00体检40元，拍照16元。
-- 再去海关路的高新区派出所办理居住证。以后科目一二三四驾管所考试费520元（科目一40元，科目二240元，科目三考试费240元 考试前后交）。
+- 昨天3月24在蓝鼎海棠湾附近的驾校：八一驾照和五星驾校看了下，了解了情况。周日在天湖路安农大驾校（公司附近-合肥驰远创业园的苏迪科技）报名了，2840元报名费，下周三下午13:30-15:00体检40元，拍照16元。
+- 需再去海关路的高新区派出所办理居住证。以后科目一二三四驾管所考试费520元（科目一40元，科目二240元，科目三考试费240元 考试前后交都行）。
 
 ---
 
@@ -34,7 +34,7 @@
 
 > 20180408  周日 账号受理通知
 
-- 前三天4月5,6,7清明节放假。今天周日上班。收到安徽交警短信通知，在交管12123的账号注册受理成功。
+- 前三天4月5、6、7号清明节放假。今天周日上班。收到安徽交警短信通知，在交管12123的账号注册受理成功。
 - 然后大概要等两个礼拜左右审核通过才能预约科目一考试。
 
 ---
