--- a/docs/目录.md
+++ b/docs/目录.md
@@ -56,6 +56,7 @@
   - [gitbook部署博客](编程/运维/gitbook部署博客.md)
   - [vuepress构建项目](编程/运维/vuepress构建项目.md)
   - [批量推送布署徐书法项目](编程/运维/批量推送布署徐书法项目.md)
+  - [markdown静态博客搭建综述](编程/运维/markdown静态博客搭建综述.md)
   - [gitlab、github绑定自定义域名](编程/运维/gitlab、github绑定自定义域名.md)
   - [git平台docsify布署markdown文件](编程/运维/git平台docsify布署markdown文件.md)
   - [gitlab、github、gitee布署mkdocs主题仓库](编程/运维/gitlab、github、gitee布署mkdocs主题仓库.md)
