--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -44,8 +44,77 @@
 
 <br/>
 
+### 1.3、快捷键
 
-### 1.3、菜鸟日志
+> 原神电脑端操作快捷键
+
+E-元素战技							<br/>
+Q-元素爆发                          <br/>
+F-拾取                              <br/>
+J-任务页面                          <br/>
+C-角色页面                          <br/>
+B-背包                              <br/>
+L-编队                              <br/>
+                                    <br/>
+O-好友                              <br/>
+G-教程                              <br/>
+M-地图                              <br/>
+V-追踪                              <br/>
+P-中端挑战                          <br/>
+Y-通知详情                          <br/>
+                                    <br/>
+F1-冒险之证                         <br/>
+F2-联机                             <br/>
+F3-抽卡祈愿                         <br/>
+F4-纪行                             <br/>
+F5-活动                             <br/>
+                                    <br/>
+AWSD-角色移动                       <br/>
+12345-切换角色                      <br/>
+鼠标滚轮-元素视野                   <br/>
+鼠标左键-普通攻击                   <br/>
+鼠标右键或左shift-冲刺              <br/>
+                                    <br/>
+space-起飞/降落/攀爬时向上跳        <br/>
+ESC-打开派蒙界面                    <br/>
+Enter-聊天页面                      <br/>
+Ctrl-切换走路/跑步状态              <br/>
+
+---
+
+### 1.4、名词解释
+
+**粉球**：纠缠之缘，在祈愿up池子里抽取角色。目前有雷电将军、胡桃、可莉、神里绫华、温迪、八重神子、赛诺、散兵、珊瑚宮心海等等几十个五星角色。 <br/>
+**篮球**：相遇之缘，在常驻池子里抽取角色。目前有七个五星角色：莫娜、七七、琴，刻晴、迪卢克、提纳里、迪希雅。 <br/>
+**保底**：最多90个粉球抽到一个五星角色，此五星是当期up即是小保底不歪，此五星不是当期up即小保底歪了。如果歪了则最多再抽90粉球必定会获得当期up，称之为大保底。一般情况60到80抽会获取一个五星。 <br/>
+**定轨**：武器池的保底机制，角色池是第二次必定获取，武器是第三次必定获取。但是每次最多是八十抽。 武器池用的是粉球，160[原石]( https://bbs.mihoyo.com/ys/obc/content/5566/detail )=1粉球（篮球）。<br/>
+<br/>
+**人权卡**：强大的、好用的、抽了不亏的五星角色。目前有五位：岩神钟离、雷神雷电将军、草神纳西妲、夜天后-夜兰、叶天帝-枫原万叶。 <br/>
+**体力**：原粹树脂，满值160，8分钟自动补充一个，也可用脆弱树脂或原石补充，1脆弱树脂=60点原粹树脂；50原石=60点原粹树脂；40原粹树脂=1浓缩树脂。打秘境刷圣遗物用的就是体力。 <br/>
+**国家队**：含有点秋香，班尼特、行秋、香菱的队伍。 <br/>
+<br/>
+**深渊**：深境螺旋，位于蒙德东方的马斯克礁。共12层，前八层为一次性挑战。后四层每半个月更新一次，每层有三间；满星通关一间获取50原石，满星通关一层获取150原石，共600原石。 <br/>
+**大世界**：除深渊之外的原神提瓦特世界。 <br/>
+**风套**：圣遗物-翠绿之影，风属性角色如万叶最佳圣遗物。在合成台或者秘境-铭记之谷获取。 <br/>
+**草套**：圣遗物-深林的记忆，草属性角色如纳西妲最佳圣遗物。在草本-秘境-缘觉塔获取。 <br/>
+--202307 <br/>
+
+<br/>
+
+### 1.5、我的文档
+
+| 序号   | 名称        |  时间          |
+| -----  | ----------- |  ------------- |
+| 1      | 《[我的原神旅行观测记录]( https://xushufa.cn/docs/sheng-huo/sui-bi/wo-de-yuan-shen-lu-xing-guan-ce-ji-lu.html )》            | 2022-11-24 |
+| 2      | 《[纪念一下，三百天打满深渊]( https://vuepress-blog.xushufa.cn/%E7%94%9F%E6%B4%BB/%E9%9A%8F%E7%AC%94/%E7%BA%AA%E5%BF%B5%E4%B8%80%E4%B8%8B%EF%BC%8C%E4%B8%89%E7%99%BE%E5%A4%A9%E6%89%93%E6%BB%A1%E6%B7%B1%E6%B8%8A.html )》  | 2023-08-04  |
+| 3      | 《[原神历史版本祈愿up活动速递]( https://gitcode.net/xu180/document/-/blob/master/article/%E9%9A%8F%E7%AC%94/%E5%8E%9F%E7%A5%9E%E5%8E%86%E5%8F%B2%E7%89%88%E6%9C%AC%E7%A5%88%E6%84%BFup%E6%B4%BB%E5%8A%A8%E9%80%9F%E9%80%92.md )》          | 2023-08-22 |
+| 4      | [原神图片]( https://agit.ai/xuyq/document/src/branch/master/imgs/yuanshen )  &ensp; [练度]( https://sourceforge.net/p/xdocument/code/ci/master/tree/imgs/yuanshen/%E6%88%91%E7%9A%84/20230909/ ) &ensp; [二创图]( https://bitbucket.org/xu12345/document/src/master/imgs/yuanshen/ )          | from 2022 |
+
+
+
+## 2、旅行者
+
+### 2.1、菜鸟日志
 
 > 提瓦特之旅开始了
 
@@ -198,7 +267,7 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 <br/>
 
-### 1.4、萌新之旅
+### 2.2、萌新之旅
 
 > 八级萌新了，迈向新征程
 
@@ -299,6 +368,7 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 <br/>
 
+### 2.3、挑战深渊
 
 **9、培养角色 挑战深渊**
 
@@ -355,69 +425,58 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 --20230710
 
----
-
-### 1.5、名词解释
-
-**粉球**：纠缠之缘，在祈愿up池子里抽取角色。目前有雷电将军、胡桃、可莉、神里绫华、温迪、八重神子、赛诺、散兵、珊瑚宮心海等等几十个五星角色。 <br/>
-**篮球**：相遇之缘，在常驻池子里抽取角色。目前有七个五星角色：莫娜、七七、琴，刻晴、迪卢克、提纳里、迪希雅。 <br/>
-**保底**：最多90个粉球抽到一个五星角色，此五星是当期up即是小保底不歪，此五星不是当期up即小保底歪了。如果歪了则最多再抽90粉球必定会获得当期up，称之为大保底。一般情况60到80抽会获取一个五星。 <br/>
-**定轨**：武器池的保底机制，角色池是第二次必定获取，武器是第三次必定获取。但是每次最多是八十抽。 武器池用的是粉球，160[原石]( https://bbs.mihoyo.com/ys/obc/content/5566/detail )=1粉球（篮球）。<br/>
-<br/>
-**人权卡**：强大的、好用的、抽了不亏的五星角色。目前有五位：岩神钟离、雷神雷电将军、草神纳西妲、夜天后-夜兰、叶天帝-枫原万叶。 <br/>
-**体力**：原粹树脂，满值160，8分钟自动补充一个，也可用脆弱树脂或原石补充，1脆弱树脂=60点原粹树脂；50原石=60点原粹树脂；40原粹树脂=1浓缩树脂。打秘境刷圣遗物用的就是体力。 <br/>
-**国家队**：含有点秋香，班尼特、行秋、香菱的队伍。 <br/>
-<br/>
-**深渊**：深境螺旋，位于蒙德东方的马斯克礁。共12层，前八层为一次性挑战。后四层每半个月更新一次，每层有三间；满星通关一间获取50原石，满星通关一层获取150原石，共600原石。 <br/>
-**大世界**：除深渊之外的原神提瓦特世界。 <br/>
-**风套**：圣遗物-翠绿之影，风属性角色如万叶最佳圣遗物。在合成台或者秘境-铭记之谷获取。 <br/>
-**草套**：圣遗物-深林的记忆，草属性角色如纳西妲最佳圣遗物。在草本-秘境-缘觉塔获取。 <br/>
---202307 <br/>
-
 <br/>
 
-### 1.6、快捷键
+**10、枫丹枫丹**
 
-> 原神电脑端操作快捷键
+八月十六号4.0版本枫丹开启水下世界，林尼/夜兰up，新地图，新任务，新玩法，原石比较多。 <br/>
+九月五号下半场开启，钟离/达达利亚up。从3.7万叶版本开始小月卡攒了两个多月，一百八十多粉球（两万八千多原石）本来预计两金或三金。<br/>
+想不到大保底了，一百三十多抽才有帝君，剩余五十多抽没出金。相当失望，米哈游有点坑啊。 <br/>
+在提瓦特小助手查了一下，原来我是终极非酋，平均一万七原石才能出一个up。 <br/>
+身边的几个原神小伙伴是大非酋，只有我更肝更非。 <br/>
+由此得出以下结论与感叹： <br/>
+1、零氪党月卡党平均两三个月可以攒一个大保底，能获取一个以上的up。 <br/>
+2、玄不改命，氪不改非。欧皇无敌，越肝越非。 <br/>
+3、平常心，一切有为法，如梦幻泡影。 <br/>
+--20230911
+<br/>
 
-E-元素战技							<br/>
-Q-元素爆发                          <br/>
-F-拾取                              <br/>
-J-任务页面                          <br/>
-C-角色页面                          <br/>
-B-背包                              <br/>
-L-编队                              <br/>
-                                    <br/>
-O-好友                              <br/>
-G-教程                              <br/>
-M-地图                              <br/>
-V-追踪                              <br/>
-P-中端挑战                          <br/>
-Y-通知详情                          <br/>
-                                    <br/>
-F1-冒险之证                         <br/>
-F2-联机                             <br/>
-F3-抽卡祈愿                         <br/>
-F4-纪行                             <br/>
-F5-活动                             <br/>
-                                    <br/>
-AWSD-角色移动                       <br/>
-12345-切换角色                      <br/>
-鼠标滚轮-元素视野                   <br/>
-鼠标左键-普通攻击                   <br/>
-鼠标右键或左shift-冲刺              <br/>
-                                    <br/>
-space-起飞/降落/攀爬时向上跳        <br/>
-ESC-打开派蒙界面                    <br/>
-Enter-聊天页面                      <br/>
-Ctrl-切换走路/跑步状态              <br/>
-
----
-
-## 2、观测枢
+角色综合测评 [截图]( https://bitbucket.org/xu12345/document/src/master/imgs/yuanshen/%E6%88%91%E7%9A%84/20230909/ ) <br/>
+https://bitbucket.org/xu12345/document/src/master/imgs/yuanshen/%E6%88%91%E7%9A%84/20230909/  <br/>
 
 
-### 2.1、雷神
+当前有三组配队：雷国、胡行钟、草国  <br/>
+雷国：雷神国家队、雷夜香班、雷夜万班  <br/>
+胡行钟：胡行钟夜、胡行钟莫、胡夜钟莫  <br/>
+草国：纳行久海、纳行久钟、纳行久香  <br/>
+
+胡桃重击手法很难操作，一直练不好，aa跳、aa闪、aa闪跳返回。相当不好练，还是算了。  <br/>
+深渊只需要两队就行，以后就专心培养雷国草国就行，圣遗物要一直刷下去。  <br/>
+雷电将军、夜兰、香菱，要绝缘套；班尼特要宗室套。  <br/>
+纳西妲要深林套，行秋宗室套比较好，久岐忍二饰金二乐团精通够了就行。  <br/>
+艾尔海森要饰金套，精草暴（精通沙 草伤杯 暴伤头）。  <br/>
+打[缘觉塔]( https://bbs.mihoyo.com/ys/obc/content/4468/detail )获取深林套、饰金套，合成台三合一绝缘套。  <br/>
+--20230911
+
+
+<br/>
+
+### 2.4、天地万象
+
+入坑原神，首先是大世界探索，做任务，升级角色、武器、天赋、圣遗物。  <br/>
+同时抽卡获取五星up，配队角色，打boss，打周本，找宝箱，找神瞳。  <br/>
+接居民声望，玩尘歌壶，七圣召唤，弹琴，钓鱼。  <br/>
+角色培养的差不多了，同时探索度百分百之后，便是长久的长草期。  <br/>
+这时候只能等新版本新活动，完成每日委托，打打圣遗物，做做[天地万象]( https://www.miyoushe.com/ys/search?keyword=%E5%A4%A9%E5%9C%B0%E4%B8%87%E8%B1%A1 )的隐藏成就 。  <br/>
+--20230913
+
+<br/>
+
+
+## 3、观测枢
+
+
+### 3.1、雷神
 
 [雷电将军]( https://bbs.mihoyo.com/ys/obc/content/2404/detail )  梦想一心  快到碗里来 <br/>
 雷电将军，5星雷系长柄武器角色。其名为「雷电影」，魔神名讳为「巴尔泽布」，雷电将军只是称谓。前任雷电将军「雷电真」·巴尔与现任雷电将军「雷电影」·巴尔泽布是双生魔神，「真」在数百年前的战争中逝世，「影」便来到了幕前。许诺稻妻臣民“千世万代不变不移的永恒”，然而自己却在「永恒」里迷失··· <br/>
@@ -505,7 +564,7 @@ Ctrl-切换走路/跑步状态              <br/>
 <br/>
 
 
-### 2.2、升级
+### 3.2、升级
 
 雷神国家队就缺少行秋了，要开始攒材料。 <br/>
 
@@ -592,7 +651,7 @@ lv1-90等级突破材料： <br/>
 <br/>
 
 
-### 2.3、配队
+### 3.3、配队
 
 五星主c：神里绫华、甘雨、胡桃，魈、公子、宵宫，雷神、绫人、一斗、优菈、可莉、迪卢克、刻晴。<br/>
 原神四神：蒙德风神温迪，璃月岩神钟离，稻妻雷神雷电将军，须弥草神纳西妲。<br/>
@@ -615,7 +674,7 @@ lv1-90等级突破材料： <br/>
 
 <br/>
 
-### 2.4、圣遗物
+### 3.4、圣遗物
 
 > 圣遗物各部位主副词条属性详解
 
@@ -659,7 +718,7 @@ lv1-90等级突破材料： <br/>
 <br/>
 
 
-### 2.5、天赋书
+### 3.5、天赋书
 
 
 一共有三个战斗天赋可升级：  普通攻击(A)  /  元素战技(E)  /  元素爆发(Q)  <br/>
@@ -1069,7 +1128,7 @@ lv1-90等级突破材料： <br/>
 <br/>
 
 
-### 2.6、元素反应
+### 3.6、元素反应
 
 
 火，水，风，雷，草，冰，岩   七种元素
