--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -99,6 +99,8 @@ Ctrl-切换走路/跑步状态              <br/>
 **草套**：圣遗物-深林的记忆，草属性角色如纳西妲最佳圣遗物。在草本-秘境-缘觉塔获取。 <br/>
 --202307 <br/>
 
+**技能**：a-普攻；z-重击；e-元素战技；q-元素爆发。
+
 <br/>
 
 ### 1.5、我的文档
@@ -450,7 +452,7 @@ https://bitbucket.org/xu12345/document/src/master/imgs/yuanshen/%E6%88%91%E7%9A%
 胡行钟：胡行钟夜、胡行钟莫、胡夜钟莫  <br/>
 草国：纳行久海、纳行久钟、纳行久香  <br/>
 
-胡桃重击手法很难操作，一直练不好，aa跳、aa闪、aa闪跳返回。相当不好练，还是算了。  <br/>
+胡桃重击手法很难操作，一直练不好，az跳（普攻重击跳跃）、az闪、az闪跳返回。相当不好练，还是算了。  <br/>
 深渊只需要两队就行，以后就专心培养雷国草国就行，圣遗物要一直刷下去。  <br/>
 雷电将军、夜兰、香菱，要绝缘套；班尼特要宗室套。  <br/>
 纳西妲要深林套，行秋宗室套比较好，久岐忍二饰金二乐团精通够了就行。  <br/>
@@ -472,6 +474,13 @@ https://bitbucket.org/xu12345/document/src/master/imgs/yuanshen/%E6%88%91%E7%9A%
 
 <br/>
 
+[角色练度]( https://docs.qq.com/sheet/DSnhpZlZ6VGNtd2p0?tab=000001 )  20230920 <br/>
+https://sourceforge.net/p/xdocument/code/ci/master/tree/imgs/yuanshen/%E6%88%91%E7%9A%84/20230920/  <br/>
+
+[原神未完成的成就]( https://docs.qq.com/sheet/DSnhpZlZ6VGNtd2p0?tab=000001 )   20230927  4.1版本新增56个成就  共1093个 <br/>
+https://docs.qq.com/sheet/DSnhpZlZ6VGNtd2p0?tab=000001
+
+<br/>
 
 ## 3、观测枢
 
