--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -474,7 +474,7 @@ https://bitbucket.org/xu12345/document/src/master/imgs/yuanshen/%E6%88%91%E7%9A%
 
 <br/>
 
-[角色练度]( https://docs.qq.com/sheet/DSnhpZlZ6VGNtd2p0?tab=000001 )  20230920 <br/>
+[角色练度]( https://sourceforge.net/p/xdocument/code/ci/master/tree/imgs/yuanshen/%E6%88%91%E7%9A%84/20230920/ )  20230920 <br/>
 https://sourceforge.net/p/xdocument/code/ci/master/tree/imgs/yuanshen/%E6%88%91%E7%9A%84/20230920/  <br/>
 
 [原神未完成的成就]( https://docs.qq.com/sheet/DSnhpZlZ6VGNtd2p0?tab=000001 )   20230927  4.1版本新增56个成就  共1093个 <br/>
