--- a/docs/目录.md
+++ b/docs/目录.md
@@ -73,6 +73,7 @@
   
 > 资料
 
+  - [工具网站readMe](编程/资料/工具网站readMe.md)
   - [nodejs与npm笔记](编程/资料/nodejs与npm笔记.md)
   - [jquery笔记](编程/资料/jquery笔记.md)
   - [二进制数负数](编程/资料/二进制数负数.md)
