--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -34,12 +34,13 @@
 | -----  | ----------- |  ------------- |  ------------- |
 | 1      | [米游社]( https://www.miyoushe.com/ys/ )                                   | https://www.miyoushe.com/ys/                               | 原神官网   |
 | 2      | [提瓦特地图]( https://act.hoyolab.com/ys/app/interactive-map/index.html )  | https://act.hoyolab.com/ys/app/interactive-map/index.html  | 原神国际服 |
-| 3      | [原魔计算器]( https://genshin.mingyulab.com/cost/character_cost )          | https://genshin.mingyulab.com/cost/character_cost 		   | 工具 |
-| 4      | [莫娜占卜铺]( https://www.mona-uranai.com/intro )                          | https://www.mona-uranai.com/intro      					   | 工具 |
-| 5      | [原神伤害计算]( https://genshin-calc.sirokuma.cc/ )                        | https://genshin-calc.sirokuma.cc/      					   | 工具 |
-| 6      | [nga社区]( https://nga.178.com/thread.php?fid=650 )                        | https://nga.178.com/thread.php?fid=650 					   | 论坛 |
-| 7      | [原神TapTap社区]( https://www.taptap.cn/app/168332/topic )                 | https://www.taptap.cn/app/168332/topic 					   | 论坛 |
-| 8      | [原神贴吧]( https://tieba.baidu.com/f?kw=%E5%8E%9F%E7%A5%9E )              | https://tieba.baidu.com/f?kw=%E5%8E%9F%E7%A5%9E            | 论坛 |
+| 3      | [椰羊成就]( https://cocogoat.work/achievement )                            | https://cocogoat.work/achievement 		                   | 工具 |
+| 4      | [原魔计算器]( https://genshin.mingyulab.com/cost/character_cost )          | https://genshin.mingyulab.com/cost/character_cost 		   | 工具 |
+| 5      | [莫娜占卜铺]( https://www.mona-uranai.com/intro )                          | https://www.mona-uranai.com/intro      					   | 工具 |
+| 6      | [原神伤害计算]( https://genshin-calc.sirokuma.cc/ )                        | https://genshin-calc.sirokuma.cc/      					   | 工具 |
+| 7      | [nga社区]( https://nga.178.com/thread.php?fid=650 )                        | https://nga.178.com/thread.php?fid=650 					   | 论坛 |
+| 8      | [原神TapTap社区]( https://www.taptap.cn/app/168332/topic )                 | https://www.taptap.cn/app/168332/topic 					   | 论坛 |
+| 9      | [原神贴吧]( https://tieba.baidu.com/f?kw=%E5%8E%9F%E7%A5%9E )              | https://tieba.baidu.com/f?kw=%E5%8E%9F%E7%A5%9E            | 论坛 |
 
 
 <br/>
@@ -89,7 +90,7 @@ Ctrl-切换走路/跑步状态              <br/>
 **保底**：最多90个粉球抽到一个五星角色，此五星是当期up即是小保底不歪，此五星不是当期up即小保底歪了。如果歪了则最多再抽90粉球必定会获得当期up，称之为大保底。一般情况60到80抽会获取一个五星。 <br/>
 **定轨**：武器池的保底机制，角色池是第二次必定获取，武器是第三次必定获取。但是每次最多是八十抽。 武器池用的是粉球，160[原石]( https://bbs.mihoyo.com/ys/obc/content/5566/detail )=1粉球（篮球）。<br/>
 <br/>
-**人权卡**：强大的、好用的、抽了不亏的五星角色。目前有五位：岩神钟离、雷神雷电将军、草神纳西妲、夜天后-夜兰、叶天帝-枫原万叶。 <br/>
+**人权卡**：强大的、好用的、抽了不亏的五星角色。目前有：岩神钟离、雷神雷电将军、草神纳西妲、夜天后-夜兰、叶天帝-枫原万叶、水神芙宁娜。 <br/>
 **体力**：原粹树脂，满值160，8分钟自动补充一个，也可用脆弱树脂或原石补充，1脆弱树脂=60点原粹树脂；50原石=60点原粹树脂；40原粹树脂=1浓缩树脂。打秘境刷圣遗物用的就是体力。 <br/>
 **国家队**：含有点秋香，班尼特、行秋、香菱的队伍。 <br/>
 <br/>
@@ -110,7 +111,7 @@ Ctrl-切换走路/跑步状态              <br/>
 | 1      | 《[我的原神旅行观测记录]( https://xushufa.cn/docs/sheng-huo/sui-bi/wo-de-yuan-shen-lu-xing-guan-ce-ji-lu.html )》            | 2022-11-24 |
 | 2      | 《[纪念一下，三百天打满深渊]( https://vuepress-blog.xushufa.cn/%E7%94%9F%E6%B4%BB/%E9%9A%8F%E7%AC%94/%E7%BA%AA%E5%BF%B5%E4%B8%80%E4%B8%8B%EF%BC%8C%E4%B8%89%E7%99%BE%E5%A4%A9%E6%89%93%E6%BB%A1%E6%B7%B1%E6%B8%8A.html )》  | 2023-08-04  |
 | 3      | 《[原神历史版本祈愿up活动速递]( https://gitcode.net/xu180/document/-/blob/master/article/%E9%9A%8F%E7%AC%94/%E5%8E%9F%E7%A5%9E%E5%8E%86%E5%8F%B2%E7%89%88%E6%9C%AC%E7%A5%88%E6%84%BFup%E6%B4%BB%E5%8A%A8%E9%80%9F%E9%80%92.md )》          | 2023-08-22 |
-| 4      | [原神图片]( https://agit.ai/xuyq/document/src/branch/master/imgs/yuanshen )  &ensp; [练度]( https://sourceforge.net/p/xdocument/code/ci/master/tree/imgs/yuanshen/%E6%88%91%E7%9A%84/20230909/ ) &ensp; [二创图]( https://bitbucket.org/xu12345/document/src/master/imgs/yuanshen/ )          | from 2022 |
+| 4      | [原神图片]( https://agit.ai/xuyq/document/src/branch/master/imgs/yuanshen )  &ensp; [练度]( https://sourceforge.net/p/xdocument/code/ci/master/tree/imgs/yuanshen/%E6%88%91%E7%9A%84/ ) &ensp; [二创图]( https://bitbucket.org/xu12345/document/src/master/imgs/yuanshen/ )          | from 2022 |
 
 
 
@@ -427,22 +428,6 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 --20230710
 
-<br/>
-
-**10、枫丹枫丹**
-
-八月十六号4.0版本枫丹开启水下世界，林尼/夜兰up，新地图，新任务，新玩法，原石比较多。 <br/>
-九月五号下半场开启，钟离/达达利亚up。从3.7万叶版本开始小月卡攒了两个多月，一百八十多粉球（两万八千多原石）本来预计两金或三金。<br/>
-想不到大保底了，一百三十多抽才有帝君，剩余五十多抽没出金。相当失望，米哈游有点坑啊。 <br/>
-在提瓦特小助手查了一下，原来我是终极非酋，平均一万七原石才能出一个up。 <br/>
-身边的几个原神小伙伴是大非酋，只有我更肝更非。 <br/>
-由此得出以下结论与感叹： <br/>
-1、零氪党月卡党平均两三个月可以攒一个大保底，能获取一个以上的up。 <br/>
-2、玄不改命，氪不改非。欧皇无敌，越肝越非。 <br/>
-3、平常心，一切有为法，如梦幻泡影。 <br/>
---20230911
-<br/>
-
 角色综合测评 [截图]( https://bitbucket.org/xu12345/document/src/master/imgs/yuanshen/%E6%88%91%E7%9A%84/20230909/ ) <br/>
 https://bitbucket.org/xu12345/document/src/master/imgs/yuanshen/%E6%88%91%E7%9A%84/20230909/  <br/>
 
@@ -460,10 +445,24 @@ https://bitbucket.org/xu12345/document/src/master/imgs/yuanshen/%E6%88%91%E7%9A%
 打[缘觉塔]( https://bbs.mihoyo.com/ys/obc/content/4468/detail )获取深林套、饰金套，合成台三合一绝缘套。  <br/>
 --20230911
 
-
 <br/>
 
-### 2.4、天地万象
+### 2.4、枫丹枫丹
+
+**10、水神将至**
+
+八月十六号4.0版本枫丹开启水下世界，林尼/夜兰up，新地图，新任务，新玩法，原石比较多。 <br/>
+九月五号下半场开启，钟离/达达利亚up。从3.7万叶版本开始小月卡攒了两个多月，一百八十多粉球（两万八千多原石）本来预计两金或三金。<br/>
+想不到大保底了，一百三十多抽才有帝君，剩余五十多抽没出金。相当失望，米哈游有点坑啊。 <br/>
+在提瓦特小助手查了一下，原来我是终极非酋，平均一万七原石才能出一个up。 <br/>
+身边的几个原神小伙伴是大非酋，只有我更肝更非。 <br/>
+由此得出以下结论与感叹： <br/>
+1、零氪党月卡党平均两三个月可以攒一个大保底，能获取一个以上的up。 <br/>
+2、玄不改命，氪不改非。欧皇无敌，越肝越非。 <br/>
+3、平常心，一切有为法，如梦幻泡影。 <br/>
+--20230911
+<br/>
+
 
 入坑原神，首先是大世界探索，做任务，升级角色、武器、天赋、圣遗物。  <br/>
 同时抽卡获取五星up，配队角色，打boss，打周本，找宝箱，找神瞳。  <br/>
@@ -481,6 +480,29 @@ https://sourceforge.net/p/xdocument/code/ci/master/tree/imgs/yuanshen/%E6%88%91%
 https://docs.qq.com/sheet/DSnhpZlZ6VGNtd2p0?tab=000001
 
 <br/>
+
+
+
+**11、芙芙来啦**
+
+4.0版本枫丹世界开启，下半抽了岩神钟离。<br/>
+4.1版本水龙王那维莱特up，很强大的主c，超越一切角色，单通深渊。但是感觉试用操作手感不合适，没抽。<br/>
+主要原因是自从抽了胡桃，可需要重击才能打出高伤害。但是偏偏本人手残，虽然胡桃有护摩，但是仍然不能满星深渊，于是仓管了。从此对重击角色都不感冒，且不对那维莱特xp，所以没抽。攒原石抽水神。<br/>
+
+4.2版本水神千呼万唤始出来，芙宁娜up。前两三个月攒了近180抽，4.0为了达达利亚垫了50抽，此次抽零命芙芙，用了100抽，小保底歪了，总共一百五十抽到手。<br/>
+剩余80抽，继续，还好，没歪，一命芙芙来啦。<br/>
+据米游社攻略，零命芙芙不好用，掉血快，增伤慢。一命芙芙放大招就有30%增伤，二命芙芙是质变，增伤上限提高，速度加快。<br/>
+过完4.2剧情，芙芙既有强度又对我xp，很赞。肝原石抽二命。<br/>
+新地图+新活动+七圣召唤+尘歌壶角色奖励，再加上氪金了四张月卡的创世结晶换了八抽。总共花了81抽，还好，没歪，二命芙芙来啦。<br/>
+[抽卡坎坷-终极非酋]( https://bitbucket.org/xu12345/document/src/master/imgs/yuanshen/%E6%88%91%E7%9A%84/20231120-%E5%BD%B1%E5%A4%9C%E7%90%B4%E8%8A%99/%E7%BB%88%E6%9E%81%E9%9D%9E%E9%85%8B.jpg )  &ensp;  [影夜琴芙-深渊战斗]( https://bitbucket.org/xu12345/document/raw/5521ecea4efd43e649c9709e5e7a8b2487b2130a/imgs/yuanshen/%E6%88%91%E7%9A%84/20231120-%E5%BD%B1%E5%A4%9C%E7%90%B4%E8%8A%99/DPS-72402-90%E7%B2%BE%E4%BA%94%E7%81%B0%E6%B2%B3-%E5%BD%B1%E5%A4%9C%E7%90%B4%E8%8A%99-Dingtalk_20231120162411.jpg )
+
+总体还好，不算很非。为了获取原石抽芙芙，地图探索度满了，之前基本没玩过的七圣召唤升到5级，四十多个角色的尘歌壶套装奖励都拿了。主要是没有氪648二命芙宁娜就到手了，相当不错。<br/>
+--20231120
+
+
+<br/>
+
+
 
 ## 3、观测枢
 
@@ -657,13 +679,43 @@ lv1-90等级突破材料： <br/>
 
 万叶不亏是人权卡，确实厉害，yyds（永远的神）。聚怪减抗增伤相当厉害，元素越多，怪物越聚集，伤害越高。<br/>
 摘果子爬山跳高，大世界很好用。深渊更是使用排行榜名列前茅的角色。<br/>
+
 <br/>
 
+---
+
+水神[芙宁娜]( https://bbs.mihoyo.com/ys/obc/content/500291 ) 众水、众方、众民与众法律的女王。多功能辅助角色，增伤回血，凝冰渡河，自动打怪。
+
+升级材料                <br/>
+1.天赋突破材料          <br/>
+1、2级突破：正义的教导3、骗骗花蜜6、12500摩拉                                       <br/>
+2、3级突破：正义的指引2、微光花蜜3、17500摩拉                                       <br/>
+3、4级突破：正义的指引4、微光花蜜4、25000摩拉                                       <br/>
+4、5级突破：正义的指引6、微光花蜜6、30000摩拉                                       <br/>
+5、6级突破：正义的指引9、微光花蜜9、37500摩拉                                       <br/>
+6、7级突破：正义的哲学4、原素花蜜4、无光质块1、120000摩拉                           <br/>
+7、8级突破：正义的哲学6、原素花蜜6、无光质块1、260000摩拉                           <br/>
+8、9级突破：正义的哲学12、原素花蜜9、无光质块2、450000摩拉                          <br/>
+9、10级突破：正义的哲学16、原素花蜜6、无光质块2、智识之冕1、700000摩拉              <br/>
+                                                                                    <br/>
+2.等级突破材料                                                                          <br/>
+20级：涤净青金碎屑1、湖光铃兰3、骗骗花蜜3、2万摩拉                              <br/>
+40级：涤净青金断片3、未能达成超越之水2、湖光铃兰 10、骗骗花蜜15、4万摩拉        <br/>
+50级：涤净青金断片6、未能达成超越之水4、湖光铃兰20、微光花蜜12、6万摩拉         <br/>
+60级：涤净青金块3、未能达成超越之水8、湖光铃兰30、微光花蜜18、8万摩拉           <br/>
+70级：涤净青金块6、未能达成超越之水12、湖光铃兰45、原素花蜜12、10万摩拉         <br/>
+80级：涤净青金6、未能达成超越之水20、湖光铃兰60、原素花蜜24、12万摩拉           <br/>
+
+<br/>
+
+---
+
+<br/>
 
 ### 3.3、配队
 
-五星主c：神里绫华、甘雨、胡桃，魈、公子、宵宫，雷神、绫人、一斗、优菈、可莉、迪卢克、刻晴。<br/>
-原神四神：蒙德风神温迪，璃月岩神钟离，稻妻雷神雷电将军，须弥草神纳西妲。<br/>
+五星主c：那维莱特、艾尔海森、神里绫华、甘雨、胡桃，魈、公子、宵宫，雷神、绫人、一斗、优菈、可莉、迪卢克、刻晴。<br/>
+原神七神：蒙德风神温迪，璃月岩神钟离，稻妻雷神雷电将军，须弥草神纳西妲，枫丹水神芙宁娜。<br/>
 草神 种门 草原核yyds，超绽放，烈绽放，元素精通，速成配队。 <br/>
 
 | 队伍     | 角色        | 说明       |
@@ -673,12 +725,13 @@ lv1-90等级突破材料： <br/>
 | 胡行钟夜 |  胡桃、行秋、钟离、夜兰	            | 双水：胡行钟莫（莫娜）。双岩：胡行钟阿（阿贝多）。 |
 | 万达国际 |  万叶、公子、班尼特、香菱	            |  |
 | 宵夜钟云 |  宵宮、夜兰、钟离、云堇                |  |
-| 雷神国家 |  雷神、行秋、班尼特、香菱	            |  性价比最高，一金即可。一命班尼特完全体，四命香菱延长旋火轮时间。 |
+| 雷神国家 |  雷神、行秋、班尼特、香菱	            |  性价比最高，一金即可。一命班尼特完全体，四命香菱延长旋火轮时间。夜兰替换行秋更强。 |
 | 妮露绽放 |  妮露+心海+**纳西妲**+草主  	        |  |
 | 提八妲钟 |  提纳里+八重神子+纳西妲+钟离           |  |
-| 玉皇妲帝 |  刻晴+皇女+纳西妲+钟离 	            |  |
-| 刻晴激化 |  刻晴+钟离+纳西妲+皇女 	            |  |
-| 久草绽放 |  久岐忍+行秋+纳西妲	                |  第四位比较灵活，生存位：北斗；攻击位：艾尔海森。|
+| 玉皇妲帝 |  刻晴+皇女+纳西妲+钟离 	            |  刻晴激化 |
+| 纳行久海 |  纳西妲+久岐忍+行秋+艾尔海森           |  草行久加海哥，安逸强大 |
+| 那芙万白 |  那维莱特、芙宁娜、万叶、白术          |  又名百万伏特，最强配队 |
+| 影夜琴芙 |  雷电将军、夜兰、芙宁娜、琴            |  水神芙宁娜最佳配队     |
 
 
 <br/>
@@ -1102,10 +1155,10 @@ lv1-90等级突破材料： <br/>
     <td class="xl66" style='font-weight:bold;' x:str>诤言</td>
     <td class="xl66" style='font-weight:bold;' x:str>巧思</td>
     <td class="xl66" style='font-weight:bold;' x:str>笃行</td>
-    <td class="xl67" rowspan="5" x:str>全部</td>
+    <td class="xl67" rowspan="6" x:str>全部</td>
    </tr>
    <tr height="18" style='height:13.50pt;'>
-    <td class="xl70" height="72" rowspan="4" x:str>适配角色</td>
+    <td class="xl70" height="72" rowspan="5" x:str>适配角色</td>
     <td class="xl65" x:str>珐露珊</td>
     <th class="xl65" style='text-align:left;' x:str>纳西妲</th>
     <td class="xl65" x:str>流浪者</td>
@@ -1122,8 +1175,69 @@ lv1-90等级突破材料： <br/>
    </tr>
    <tr height="18" style='height:13.50pt;'>
     <td class="xl65" x:str>坎蒂丝</td>
+    <td class="xl65">卡维</td>
+    <td class="xl65">迪希雅</td>
+   </tr>
+    <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str></td>
+    <td class="xl65">艾尔海森</td>
     <td class="xl65"></td>
-    <td class="xl65"></td>
+   </tr>
+   <![if supportMisalignedColumns]>
+    <tr width="0" style='display:none;'/>
+   <![endif]>
+  </table>
+
+<br/>
+
+
+---
+
+<table>
+   <col width="72" span="5" />
+   <tr>
+	    <th colspan="5">枫丹天赋本-<a href="https://bbs.mihoyo.com/ys/obc/content/7010/detail" target="_blank">苍白的遗荣</a></th>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl70" height="18" style='height:13.50pt;' x:str>怪物</td>
+    <td class="xl65" colspan="4" x:str>大型狂蔓隙境原体，一波怪</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl69" height="18" style='height:13.50pt;' x:str>时间</td>
+    <td class="xl69" x:str>周一周四</td>
+    <td class="xl69" x:str>周二周五</td>
+    <td class="xl69" x:str>周三周六</td>
+    <td class="xl69" x:str>周日</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" height="18" style='height:13.50pt;' x:str>名称</td>
+    <td class="xl65" x:str>旋韵</td>
+    <td class="xl65" x:str>箴铭</td>
+    <td class="xl65" x:str>琅诵</td>
+    <td class="xl65" x:str>全部</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl66" height="18" style='height:13.50pt;' x:str>天赋</td>
+    <td class="xl66" style='font-weight:bold;' x:str>公平</td>
+    <td class="xl66" style='font-weight:bold;' x:str>正义</td>
+    <td class="xl66" style='font-weight:bold;' x:str>秩序</td>
+    <td class="xl67" rowspan="6" x:str>全部</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl70" height="72" rowspan="5" x:str>适配角色</td>
+    <td class="xl65" x:str>林尼</td>
+    <td class="xl65" x:str>菲米尼</td>
+    <td class="xl65" x:str>琳妮特</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str>那维莱特</td>
+    <th class="xl65" x:str>芙宁娜</th>
+    <td class="xl65" x:str>莱欧斯利</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str></td>
+    <td class="xl65" x:str>夏洛蒂</td>
+    <td class="xl65" x:str></td>
    </tr>
    <![if supportMisalignedColumns]>
     <tr width="0" style='display:none;'/>
@@ -1148,7 +1262,7 @@ lv1-90等级突破材料： <br/>
 
 来自 https://bbs.mihoyo.com/ys/article/30600790
 
-<mermaid>
+```mermaid
 graph TD
 雷 --> | 感电 | 水;
 雷 --> | 超载 | 火;
@@ -1168,11 +1282,11 @@ graph TD
 冰 --> | 超导 | 雷;
 冰 --> | 冻结 | 水;
 
-</mermaid>
+```
 
 ---
 
-<mermaid>
+```mermaid
 graph LR
 元素反应 --> A1[增幅]
 元素反应 --> B1[剧变]
@@ -1211,7 +1325,7 @@ D11--> D121[草水]
 D12--> D122[草水雷]
 D13--> D123[草水火]
 
-</mermaid>
+```
 
 - 三种元素的超绽放烈绽放伤害最高。
 
@@ -1222,7 +1336,7 @@ D13--> D123[草水火]
 来自 https://bbs.mihoyo.com/ys/article/2050152
 
 
-<mermaid>
+```mermaid
 graph LR
 元素反应 --> A1[增伤类]
 元素反应 --> B1[额外伤害类]
@@ -1257,7 +1371,7 @@ C121--> C1211[结晶盾承受量仅与等级及元素精通有关]
 D11--> D121[水草]
 D12--> D122[水冰]
 
-</mermaid>
+```
 
 - 元素反应的伤害均与**触发角色**的**元素精通**有着密切的联系。
 - 两种元素，超载的群体伤害最高，感电的单体伤害最高。
