--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -499,6 +499,26 @@ https://docs.qq.com/sheet/DSnhpZlZ6VGNtd2p0?tab=000001
 总体还好，不算很非。为了获取原石抽芙芙，地图探索度满了，之前基本没玩过的七圣召唤升到5级，四十多个角色的尘歌壶套装奖励都拿了。主要是没有氪648二命芙宁娜就到手了，相当不错。<br/>
 --20231120
 
+<br/>
+
+
+**12、探索度**
+
+4.3上半up神里绫华、娜维娅，抽了绫华，组成神猫万莫队，培养了一段时间，开始刷冰本，太无聊，又长草了。<br/>
+神猫万莫是绫华、迪奥娜、万叶、莫娜的永冻队，与神鹤万心类似。<br/>
+目前蒙德璃月稻妻须弥枫丹五国的探索度基本都满了，神瞳也找齐了，开始在大世界找一些遗漏的宝箱。<br/>
+
+通过这段历程，总结了一下提高探索度寻找宝箱的方法步骤：                          <br/>
+1、新地图出来，先做任务：世界任务，魔神任务，邀约任务，委托任务。               <br/>
+2、满世界逛逛，做任务，打boss，收材料。点神像，开锚点。                         <br/>
+3、跟着攻略找神瞳，升级七天神像。                                               <br/>
+4、做[成就]( https://cocogoat.work/achievement )，天地万象、英雄之旅、挑战者、七国成就。                               <br/>
+5、寻找仙灵、限时挑战、[隐藏任务]( https://www.miyoushe.com/ys/accountCenter/collectionList?id=329557052 )、声望任务、微解密。圣章石、元能火种、道具收集。 <br/>
+6、收集[书籍]( https://www.miyoushe.com/ys/article/35039610 )，同时寻宝罗盘找宝箱。尤其是页数较多的书，例如千夜故事集、鹮巷物语。 <br/>
+7、逛大世界，总有漏网之鱼，意外之喜。水米游社，常见亮眼之作，醒脑之谈。         <br/>
+
+
+
 
 <br/>
 
@@ -1190,7 +1210,6 @@ lv1-90等级突破材料： <br/>
 
 <br/>
 
-
 ---
 
 <table>
@@ -1262,7 +1281,7 @@ lv1-90等级突破材料： <br/>
 
 来自 https://bbs.mihoyo.com/ys/article/30600790
 
-```mermaid
+<mermaid>
 graph TD
 雷 --> | 感电 | 水;
 雷 --> | 超载 | 火;
@@ -1282,11 +1301,11 @@ graph TD
 冰 --> | 超导 | 雷;
 冰 --> | 冻结 | 水;
 
-```
+</mermaid>
 
 ---
 
-```mermaid
+<mermaid>
 graph LR
 元素反应 --> A1[增幅]
 元素反应 --> B1[剧变]
@@ -1325,7 +1344,7 @@ D11--> D121[草水]
 D12--> D122[草水雷]
 D13--> D123[草水火]
 
-```
+</mermaid>
 
 - 三种元素的超绽放烈绽放伤害最高。
 
@@ -1336,7 +1355,7 @@ D13--> D123[草水火]
 来自 https://bbs.mihoyo.com/ys/article/2050152
 
 
-```mermaid
+<mermaid>
 graph LR
 元素反应 --> A1[增伤类]
 元素反应 --> B1[额外伤害类]
@@ -1371,7 +1390,7 @@ C121--> C1211[结晶盾承受量仅与等级及元素精通有关]
 D11--> D121[水草]
 D12--> D122[水冰]
 
-```
+</mermaid>
 
 - 元素反应的伤害均与**触发角色**的**元素精通**有着密切的联系。
 - 两种元素，超载的群体伤害最高，感电的单体伤害最高。
